--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -25,7 +25,9 @@ jobs:
           curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.37/mdbook-v0.4.37-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=bin
 
       - name: Run mdBook
-        run: ../bin/mdbook build
+        run: |
+          ../bin/mdbook build
+          mv book spec
         working-directory: spec
 
       - name: Setup Pages
@@ -33,8 +35,9 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        working-directory: spec
         with:
-          path: 'book'
+          path: 'spec'
 
       - name: Deploy to GitHub Pages
         id: deployment
