chore: final final thingf

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -36,6 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './spec/book'
+          token: ${{ secrets.TOKEN }}
 
       - name: Deploy to GitHub Pages
         id: deployment
